<resources>
    <string name="app_name">Calender App</string>
    <string name="_1">1</string>
    <string name="leftarrow"><![CDATA[<-]]></string>
    <string name="feb_2024">Feb 2024</string>
    <string name="rightarrow"><![CDATA[->]]></string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
</resources>